upload final_exam at 2024/12/23

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,22 @@ test1.c
 test1
 midterm_exam2/line.cpp
 midterm_exam2/sudoku.cpp
+final_exam/text.txt
+final_exam/P1.dSYM/Contents/Info.plist
+final_exam/P1.dSYM/Contents/Resources/DWARF/P1
+final_exam/P1.dSYM/Contents/Resources/Relocations/aarch64/P1.yml
+final_exam/P2.dSYM/Contents/Resources/DWARF/P2
+final_exam/P2.dSYM/Contents/Resources/Relocations/aarch64/P2.yml
+final_exam/P3.dSYM/Contents/Resources/DWARF/P3
+final_exam/P3.dSYM/Contents/Resources/Relocations/aarch64/P3.yml
+final_exam/P4.dSYM/Contents/Resources/DWARF/P4
+final_exam/P4.dSYM/Contents/Resources/Relocations/aarch64/P4.yml
+final_exam/P5.dSYM/Contents/Resources/DWARF/P5
+final_exam/P5.dSYM/Contents/Resources/Relocations/aarch64/P5.yml
+final_exam/P6.dSYM/Contents/Resources/DWARF/P6
+final_exam/P6.dSYM/Contents/Resources/Relocations/aarch64/P6.yml
+final_exam/P2.dSYM/Contents/Info.plist
+final_exam/P3.dSYM/Contents/Info.plist
+final_exam/P4.dSYM/Contents/Info.plist
+final_exam/P5.dSYM/Contents/Info.plist
+final_exam/P6.dSYM/Contents/Info.plist
